Refactor RAGOrchestrator to improve suggestion metadata and error logging
Co-authored-by: engmahmoudalgamal <engmahmoudalgamal@gmail.com>